resolving a text cutoff bug in safari for select box

--- a/src/less/definitions/elements/inputs.less
+++ b/src/less/definitions/elements/inputs.less
@@ -46,7 +46,7 @@ input[type="range"] {
 // Make multiple select elements height not fixed
 select[multiple],
 select[size] {
-    height: @input-height-base;
+    .input-size();
 }
 
 // Adjust output element
